--- a/css/coming.css
+++ b/css/coming.css
@@ -12,8 +12,10 @@ header {
   height: 100vh;
   justify-content: center;
   align-items: center;
-  background: url("../img/coming-soon.png");
+  background: url("../img/bgc.png");
   background-size: cover;
+  background-position: center center;
+  background-attachment: fixed;
   background-color: rgb(225, 225, 225, 0.3);
   display: flex;
   flex-direction: column;
