--- a/Assets/css/index.css
+++ b/Assets/css/index.css
@@ -15,7 +15,7 @@
 :root {
   --main-text-color: #000;
   --primary-text-color: #fff;
-  --active-color: #4265d6;
+  --active-color: #4265d6; 
   --bg-color: #f9f8fe;
   --secondary-bg: #f8fdfd;
 }
@@ -25,14 +25,14 @@ h1,
 h2,
 h3,
 h4 {
-  color: var(--primary-text-color);
+  color: var(--main-text-color);
 }
 a {
   text-decoration: none;
-  color: var(--primary-text-color);
-}
-.main-text{
   color: var(--main-text-color);
+}
+.primary-text{
+  color: var(--primary-text-color);
 }
 .container-fluid {
   width: 90%;
@@ -47,11 +47,18 @@ a {
 /* Header Styles  */
 header {
   min-height: auto;
-  background-image: url("/Assets/img/header-bg.png");
   background-size: cover;
   background-color: var(--bg-color);
 }
+.header{
+   background-image: url("/Assets/img/header-bg.png");
+}
 
+.ai-center{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 /* Navbar Styles  */
 nav {
   height: calc(100vh - 87vh);
@@ -62,26 +69,26 @@ nav.navbar {
   width: 100%;
 }
 nav .navbar-brand {
-  color: var(--primary-text-color);
+  color: var(--main-text-color);
   font-style: normal;
   font-weight: 700;
   font-size: 30px;
   line-height: 54px;
 }
-nav .main-text{
-    color: var(--main-text-color);
-}
-nav a.main-text{
-    color: var(--main-text-color);
-}
 nav a.nav-link {
-  color: var(--primary-text-color);
+  color: var(--main-text-color);
   font-style: normal;
   font-weight: 500;
   line-height: 30px;
+  padding: 1px;
+}
+nav a.home-active {
+  color: var(--active-color);
 }
 nav a.active {
-  color: #fff;
+  color: var(--active-color);
+  background: var(--bg-color);
+  border-radius: 50px;
 }
 
 /* Showcase Style  */
@@ -129,10 +136,10 @@ nav a.active {
 }
 
 /* Main Styles  */
-primary {
+main {
   background-color: var(--bg-color);
 }
-primary .container-fluid * {
+main .container-fluid * {
   position: relative;
   z-index: 3 !important;
 }
@@ -229,7 +236,7 @@ section.team-projects {
 }
 .team-project-slider .team-project-slider-item p {
   padding: 0 23px;
-  color: var(--primary-text-color);
+  color: var(--main-text-color);
   text-align: start;
   font-size: 1rem;
   font-weight: 400;
@@ -300,7 +307,6 @@ section.headline {
 @media only screen and (max-width: 1200px) {
   /*Small smartphones [325px -> 425px]*/
   nav .navbar-nav {
-    background-color: var(--bg-color);
     padding: 0px 20px;
   }
 
