--- a/Assets/css/index.css
+++ b/Assets/css/index.css
@@ -31,6 +31,9 @@ a {
   text-decoration: none;
   color: var(--main-text-color);
 }
+.br-sm {
+  display: none;
+}
 .primary-text {
   color: var(--primary-text-color);
 }
@@ -434,6 +437,31 @@ section.testimonial-section {
 .testimonial-slider .swiper-pagination .swiper-pagination-bullet-active {
   background: #feb800;
 }
+
+/* Footer Styles  */
+footer.main-footer {
+  background-color: var(--bg-color);
+  color: var(--main-text-color);
+  padding-top: 40px !important;
+  padding-bottom: 20px;
+}
+.main-footer .container-fluid h2 {
+  margin-bottom: 26px;
+}
+.main-footer .container-fluid p:first-child {
+  margin-top: 16px;
+}
+.main-footer .container-fluid h4 {
+  font-size: 1rem;
+  padding-bottom: 16px;
+}
+.main-footer .container-fluid h4 span a {
+  color: var(--active-color);
+}
+.main-footer .container-fluid .showcase-socials {
+  justify-content: flex-start;
+}
+
 /* //// */
 /* //// */
 /* //// */
@@ -610,6 +638,9 @@ section.testimonial-section {
   }
 }
 @media only screen and (max-width: 480px) {
+  .br-sm {
+    display: block;
+  }
   /* Review Section Media Query */
   section.testimonial-section {
     background: var(--active-color);
@@ -681,5 +712,8 @@ section.testimonial-section {
   }
   .testimonial-slider .swiper-pagination .swiper-pagination-bullet-active {
     background: #feb800;
+  }
+  .main-footer .container-fluid p:first-child {
+    font-size: 1rem;
   }
 }
